# limitr

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  rust-rate-limiter-trd.md
config/: rate_limit_config.json
example/config/: rate_limit_config.json
example/deployment/: docker-compose-example.yml
proto/limitr/v1/: limitr.proto
scripts/: leaky_bucket.lua
src/: errors.rs  lib.rs  main.rs  metrics.rs  metrics_server.rs
src/config/: loader.rs  mod.rs  validator.rs  watcher.rs
src/limiter/: leaky_bucket.rs  mod.rs
src/redis/: client.rs  mod.rs  pool.rs  script.rs
src/server/: handler.rs  mod.rs
